# contact-sorter

./: README.md  main.py  pyproject.toml  spec.md
src/: cli.py  exporter.py  grouper.py  matcher.py  merger.py  normalize.py  session.py  tui.py  vcards.py
test_data/: father.vcf  mine.vcf  mixed_case.vcf
