[project]
name = "contact-sorter"
version = "0.1.0"
description = "Merge and deduplicate Samsung VCF contact lists with interactive review"
requires-python = ">=3.10"
dependencies = [
    "vobject>=0.9.6",
    "rapidfuzz>=3.6.0",
    "rich>=13.0.0",
    "click>=8.1.0",
]

[project.scripts]
contact-sorter = "main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
